--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
+  form_validator: ^2.1.1
+  google_fonts: ^6.1.0
+  cloud_firestore: ^5.6.2
+  firebase_storage: ^12.4.1
+  file_picker: ^6.1.1
+  uuid: ^4.3.3
+  path: ^1.8.3
+  video_player: ^2.8.2
+  video_compress: ^3.1.2
 
 dev_dependencies:
   flutter_test:
