--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path: ^1.8.3
   video_player: ^2.8.2
   video_compress: ^3.1.2
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
