--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.38",
+    "@langchain/langgraph": "^0.2.45",
+    "@langchain/openai": "^0.4.2",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "langchain": "^0.3.15"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -27,5 +32,6 @@
     "firebase-functions-test": "^3.1.0",
     "typescript": "^5.7.3"
   },
-  "private": true
+  "private": true,
+  "type": "module"
 }
