--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.1
   firebase_auth: ^5.4.1
+  cloud_functions: 5.3.1
   form_validator: ^2.1.1
   google_fonts: ^6.1.0
   cloud_firestore: ^5.6.2
