--- a/functions/package.json
+++ b/functions/package.json
@@ -15,12 +15,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@genkit-ai/firebase": "^0.9.12",
     "@langchain/community": "^0.3.29",
     "@langchain/core": "^0.3.38",
     "@langchain/langgraph": "^0.2.45",
     "@langchain/openai": "^0.4.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "genkit": "^0.9.12",
+    "genkitx-openai": "^0.13.0",
     "langchain": "^0.3.15"
   },
   "devDependencies": {
