--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   video_thumbnail: ^0.5.3
   path_provider: ^2.1.2
   provider: ^6.1.1
+  image_picker: ^1.0.7
   shared_preferences: ^2.2.2
 
 dev_dependencies:
