--- a/functions/package.json
+++ b/functions/package.json
@@ -24,7 +24,9 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "genkit": "^1.0.4",
-    "langchain": "^0.3.15"
+    "genkitx-openai": "^0.13.0",
+    "langchain": "^0.3.15",
+    "openai": "^4.83.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
