--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,17 @@ dependencies:
   file_picker: ^6.1.1
   uuid: ^4.3.3
   path: ^1.8.3
-  video_player: ^2.8.2
   video_compress: ^3.1.2
   video_thumbnail: ^0.5.3
   path_provider: ^2.1.2
   provider: ^6.1.1
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
+  cached_network_image: ^3.3.1
+  cached_video_player_plus: ^3.0.3
+
+dependency_overrides:
+  video_player_android: ^2.7.16
 
 dev_dependencies:
   flutter_test:
